--- a/splp-bun/package.json
+++ b/splp-bun/package.json
@@ -12,7 +12,10 @@
     "example:client": "bun run src/examples/client.ts",
     "command-center": "bun run ../command-center/index.ts",
     "example:publisher-cc": "bun run ../command-center/examples/publisher-with-command-center.ts",
-    "test": "bun test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration"
   },
   "keywords": [
     "kafka",
@@ -30,6 +33,11 @@
   "devDependencies": {
     "@types/bun": "^1.0.0",
     "@types/node": "^20.11.5",
-    "typescript": "^5.3.3"
+    "@types/jest": "^29.5.0",
+    "typescript": "^5.3.3",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "supertest": "^6.3.0",
+    "@types/supertest": "^2.0.0"
   }
 }
