--- a/splp-php/composer.json
+++ b/splp-php/composer.json
@@ -25,14 +25,7 @@
         "php": "^8.1",
         "ext-json": "*",
         "ext-openssl": "*",
-        "ext-curl": "*",
-        "rdkafka/rdkafka": "^6.0",
-        "datastax/php-driver": "^1.6",
-        "monolog/monolog": "^3.0",
-        "ramsey/uuid": "^4.7",
-        "symfony/console": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/config": "^6.0"
+        "ext-curl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
