--- a/splp-php/composer.json
+++ b/splp-php/composer.json
@@ -25,7 +25,9 @@
         "php": "^8.1",
         "ext-json": "*",
         "ext-openssl": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "monolog/monolog": "^3.0",
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
